# gowebserver

./: .codespell_skip  .gitignore  .gitmodules  .travis-old.yml  .travis.1.yml  .travis.yml  BUILD.bazel  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  WORKSPACE  build.sh  cert.pem  codecov.yml  deps.sh  docker.mk  go.mod  go.sum  golang.mk  gowebserver.1  gowebserver.go  index.html  publish.sh  rsa.pem  server.go  snapcraft.yaml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deploy.yml  reviewdog.yml
.snapcraft/: travis_snapcraft.cfg
cert/: BUILD.bazel  cert.go  cert_test.go  certificatebuilder.go  certificatebuilder_test.go
cmd/certtool/: Dockerfile  Dockerfile.windows  certtool.go  certtool_test.go
cmd/gowebserver/: Dockerfile  Dockerfile.windows  gowebserver.go
cmd/httpprobe/: Dockerfile  Dockerfile.windows  httpprobe.go  httpprobe_test.go
config/: BUILD.bazel  configbundle.go  configbundle_test.go  file.go  file_test.go  flags.go  flags_test.go  loading.go
docs/superpowers/plans/: 2026-04-30-filesystem-package-extraction.md  2026-05-22-rich-view.md
docs/superpowers/specs/: 2026-05-22-rich-view-design.md
embedded/: BUILD.bazel  ajaxupload.html  basicupload.html  bindata.go  bindata_assetfs.go  doc.go  multipleupload.html
embedded/data/: ajaxupload.html
filesystem/: BUILD.bazel  git.go  git_test.go  http.go  native.go  public.go  tar.go  tar_test.go  util.go  util_test.go  zip.go  zip_test.go
install/: kubernetes.yaml
install/compose/: README.md  docker-compose.yaml
install/compose-standalone/: README.md  docker-compose.yaml
install/compose-standalone/gowebserver/: gowebserver.yaml
install/compose/gowebserver/: gowebserver.yaml
install/compose/grafana/dashboards/: dashboards.yaml  gowebserver.json  loki.json  loki_and_promtail.json
install/compose/grafana/datasources/: datasources.yaml
install/compose/prometheus/: prometheus.yaml
install/helm/: Chart.yaml  README.md  values.yaml
install/helm/templates/: NOTES.txt  gowebserver.yaml
install/kind/: kind-cluster.yaml
install/wasm/: README.md  index.html
internal/gowebserver/testing/: testing.go  testing_test.go
internal/gowebserver/testing/testassets/: weird #1.txt  weird#.txt  weird$.txt
internal/gowebserver/testing/testassets/assets/: 1.txt
internal/gowebserver/testing/testassets/assets/fivesix/: 5.txt  6.txt
internal/gowebserver/testing/testassets/assets/four/: 4.txt
internal/gowebserver/testing/testassets/assets/more/: 3.txt
internal/gowebserver/testing/testassets/bytype/: archive.rar  archive.tar  audio.wma  cad.dwg  certificate.crt  certificate.pub  code.cc  code.java  config.cfg  config.config  config.ini  config.json  config.yaml  config.yml  database.db  database.sqlite  disc.iso  doc.doc  doc.docx  document.doc  document.docx  download.download  ebook.epub  image.tiff  markdown.md  markup.htm  markup.html  photoshop.ai  photoshop.psd  presentation.ppt  presentation.pptx  script.js  script.ts  script.tsx  spreadsheet.xls  spreadsheet.xlsx  stylesheet.css  stylesheet.scss  terminal.sh  text.txt  (+5 more)
maintenance/: deps.sh  home.yaml  setup-deps.sh  tools.sh
packaging/: snapcraft.yaml
packaging-legacy/: gowebserver_1_amd64.snap
packaging-legacy/prime/: command-gowebserver.wrapper
packaging-legacy/prime/meta/: snap.yaml
packaging/legacy/: snapcraft.yaml
pkg/certtool/: certtool.go  certtool_test.go
pkg/filesystem/: filesystem.go  filesystem_archive.go  filesystem_common.go  filesystem_git.go  filesystem_git_unsupported.go  filesystem_local.go  filesystem_nested.go  filesystem_test.go  util.go  util_test.go
pkg/gowebserver/: config.go  config_test.go  custom-index.html  customindex.go  customindex_test.go  filesystem.go  filesystem_archive.go  filesystem_common.go  filesystem_git.go  filesystem_git_unsupported.go  filesystem_local.go  filesystem_local_test.go  filesystem_nested.go  filesystem_test.go  filetypes.go  filetypes_test.go  gowebserver.go  gowebserver_posix.go  gowebserver_test.go  gowebserver_windows.go  http.go  httpserver.go  httpserver_test.go  index.go  index_test.go  monitoring.go  monitoring_test.go  monitoring_with_host_metrics.go  monitoring_with_tracing.go  monitoring_with_tracing_test.go  monitoring_without_host_metrics.go  monitoring_without_tracing.go  rich-view.html  richview.go  richview_test.go  search.go  search_test.go  template-index.html  template-modernindex.html  tracing.go  (+6 more)
pkg/gowebserver/testdata/: broken-template.html  empty.yaml  hi-template-want.html  hi-template.html  multiindex.html  nodefaults.yaml  populated.yaml  test-index.html  test-modernindex.html
pkg/httpprobe/: httpprobe.go  httpprobe_test.go
server/: BUILD.bazel  basicupload.html  gowebserver.go  gowebserver_posix.go  gowebserver_windows.go  httpserver.go  tracing.go  upload.go  upload.html  uploadtemplate.go  util.go  util_test.go
termhook/: BUILD.bazel  atomics.go  public.go  termhook.go  termhook_gae.go  termhook_nongae.go  termhook_test.go
testing/: BUILD.bazel  testassets.go  testassets.tar  testassets.tar.bz2  util.go
testing/testassets/assets/: 2.txt
