load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library")

gazelle(
    name = "gazelle",
    prefix = "github.com/jeremyje/gowebserver",
)


go_library(
    name = "go_default_library",
    srcs = ["gowebserver.go"],
    importpath = "github.com/jeremyje/gowebserver",
    visibility = ["//visibility:private"],
    deps = [
        "//cert:go_default_library",
        "//config:go_default_library",
        "//server:go_default_library",
    ],
)

go_binary(
    name = "gowebserver",
    importpath = "github.com/jeremyje/gowebserver",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
