load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cert.go",
        "certificatebuilder.go",
    ],
    importpath = "github.com/jeremyje/gowebserver/cert",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cert_test.go",
        "certificatebuilder_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/jeremyje/gowebserver/cert",
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
