load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "configbundle.go",
        "file.go",
        "flags.go",
    ],
    importpath = "github.com/jeremyje/gowebserver/config",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v2//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "configbundle_test.go",
        "file_test.go",
        "flags_test.go",
    ],
    importpath = "github.com/jeremyje/gowebserver/config",
    library = ":go_default_library",
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
