load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bindata_assetfs.go"],
    importpath = "github.com/jeremyje/gowebserver/embedded",
    visibility = ["//visibility:public"],
    deps = ["@com_github_elazarl_go_bindata_assetfs//:go_default_library"],
)
