load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//examples/bindata:bindata.bzl", "bindata")

bindata(
    name = "data",
    srcs = glob(["*"], exclude=["BUILD.bazel"]),
    package = "embedded",
)

go_library(
    name = "go_default_library",
    srcs = [":data"],
    visibility = ["//visibility:public"],
    importpath = "github.com/jeremyje/gowebserver/embedded",
)
