load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//extras:bindata.bzl", "bindata")

bindata(
    name = "data",
    srcs = glob(
        ["*"],
        exclude = ["BUILD.bazel"],
    ),
    package = "embedded",
)

go_library(
    name = "go_default_library",
    srcs = [":data"],
    importpath = "github.com/jeremyje/gowebserver/embedded",
    visibility = ["//visibility:public"],
    deps = ["@com_github_elazarl_go_bindata_assetfs//:go_default_library"],
)
