load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "git.go",
        "native.go",
        "public.go",
        "tar.go",
        "util.go",
        "zip.go",
    ],
    importpath = "github.com/jeremyje/gowebserver/filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "//termhook:go_default_library",
        "@in_gopkg_src_d_go_git_v4//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "git_test.go",
        "tar_test.go",
        "util_test.go",
        "zip_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/jeremyje/gowebserver/filesystem",
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "//testing:go_default_library",
    ],
)
