load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "httpserver.go",
        "tracing.go",
        "upload.go",
        "util.go",
    ],
    importpath = "github.com/jeremyje/gowebserver/server",
    visibility = ["//visibility:public"],
    deps = [
        "//embedded:go_default_library",
        "//filesystem:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_rs_cors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["util_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/jeremyje/gowebserver/server",
)
