load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "atomics.go",
        "public.go",
        "termhook.go",
        "termhook_nongae.go",
    ],
    importpath = "github.com/jeremyje/gowebserver/termhook",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["termhook_test.go"],
    importpath = "github.com/jeremyje/gowebserver/termhook",
    library = ":go_default_library",
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
