load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

go_library(
    name = "testassets_go_lib",
    srcs = [
        ":testassets.go",
    ],
    importpath = "github.com/jeremyje/gowebserver/testing",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "testassets.go",
        "util.go",
    ],

    #deps = [
    #  ":testassets_go_lib",
    #],
    importpath = "github.com/jeremyje/gowebserver/testing",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "testassets_fg",
    srcs = glob([
        "testassets/**/*",
    ]),
)

genrule(
    name = "testassets_tar",
    srcs = [":testassets_fg"],
    outs = ["testassets.tar"],
    cmd = "tar cfh $@ $(locations :testassets_fg) --transform='s/testing\/testassets\///g'",
)

genrule(
    name = "testassets_tar_gz",
    srcs = [":testassets_fg"],
    outs = ["testassets.tar.gz"],
    cmd = "tar czfh $@ $(locations :testassets_fg) --transform='s/testing\/testassets\///g'",
)

genrule(
    name = "testassets_tar_bz2",
    srcs = [":testassets_fg"],
    outs = ["testassets.tar.bz2"],
    cmd = "tar cjfh $@ $(locations :testassets_fg) --transform='s/testing\/testassets\///g'",
)

genrule(
    name = "testassets_zip",
    srcs = [":testassets_fg"],
    outs = ["testassets.zip"],
    cmd = "zip -qr9 $@ $(locations :testassets_fg)",
)

genrule(
    name = "testassets_go",
    srcs = [
        ":testassets.tar",
        ":testassets.tar.gz",
        ":testassets.tar.bz2",
        ":testassets.zip",
    ],
    outs = ["testassets.go"],
    cmd = "echo \"package testing\" > $@ \
	&& echo \"const zipAssets=\\\"$$(base64 -w0 $(location :testassets.zip))\\\"\" >> $@ \
	&& echo \"const tarAssets=\\\"$$(base64 -w0 $(location :testassets.tar))\\\"\" >> $@ \
	&& echo \"const tarGzAssets=\\\"$$(base64 -w0 $(location :testassets.tar.gz))\\\"\" >> $@ \
	&& echo \"const tarBzip2Assets=\\\"$$(base64 -w0 $(location :testassets.tar.bz2))\\\"\" >> $@",
)
